# deepresearch

./: README.md  pyproject.toml  report.md
src/deepresearch/: app.py  crew.py  main.py
