[project]
name = "deepresearch"
version = "0.1.0"
description = "deepresearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools,google-genai]==1.6.0",
    "streamlit"
]

[project.scripts]
deepresearch = "deepresearch.main:run"
run_crew = "deepresearch.main:run"
train = "deepresearch.main:train"
replay = "deepresearch.main:replay"
test = "deepresearch.main:test"
run_with_trigger = "deepresearch.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
